fix glow overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,7 +23,7 @@
   54%,
   56%,
   100% {
-    filter: drop-shadow(0 0 1em rgba(255, 204, 103, 0.5));
+    filter: drop-shadow(0 -0.25em 1em rgba(255, 204, 103, 0.5));
   }
 }
 
@@ -43,6 +43,6 @@
   54%,
   56%,
   100% {
-    filter: drop-shadow(0 0 1em rgba(255, 204, 103, 0.5));
+    filter: drop-shadow(0 -0.25em 1em rgba(255, 204, 103, 0.5));
   }
 }
